--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Mirrored from flatfull.com/themes/basik/html/video.cat.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 06 May 2020 09:27:42 GMT -->
 <head>
     <meta charset="utf-8">
-    <title>Cat | Basik - Bootstrap 4 Web Application</title>
+    <title>Dashboard | Loveworld Live Tv</title>
     <meta name="description" content="Responsive, Bootstrap, BS4">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><!-- style -->
     <link rel="stylesheet" href="../assets/css/site.min.css">
@@ -11,12 +10,8 @@
 <body class="layout-column">
 <header id="header" class="page-header bg-white b-b">
     <div class="navbar navbar-expand-lg"><!-- brand --> <a href="index.html" class="navbar-brand w w-auto-sm">
-        <svg width="32" height="32" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
-            <g class="loading-spin" style="transform-origin: 256px 256px">
-                <path d="M200.043 106.067c-40.631 15.171-73.434 46.382-90.717 85.933H256l-55.957-85.933zM412.797 288A160.723 160.723 0 0 0 416 256c0-36.624-12.314-70.367-33.016-97.334L311 288h101.797zM359.973 134.395C332.007 110.461 295.694 96 256 96c-7.966 0-15.794.591-23.448 1.715L310.852 224l49.121-89.605zM99.204 224A160.65 160.65 0 0 0 96 256c0 36.639 12.324 70.394 33.041 97.366L201 224H99.204zM311.959 405.932c40.631-15.171 73.433-46.382 90.715-85.932H256l55.959 85.932zM152.046 377.621C180.009 401.545 216.314 416 256 416c7.969 0 15.799-.592 23.456-1.716L201.164 288l-49.118 89.621z"></path>
-            </g>
-        </svg><!-- <img src="../assets/img/logo.png" alt="..."> --> <span
-            class="hidden-folded d-inline l-s-n-1x w w-auto-sm">Video</span> </a><!-- / brand -->
+        <img src="../assets/img/logo.png" alt="..."><span
+            class="hidden-folded d-inline l-s-n-1x w w-auto-sm">Loveworld Live Tv</span> </a><!-- / brand -->
         <!-- Navbar collapse -->
         <div class="collapse navbar-collapse order-2 order-lg-1" id="navbarToggler">
             <form class="input-group m-2 my-lg-0">
@@ -29,8 +24,6 @@
             </form>
         </div>
         <ul class="nav navbar-menu order-1 order-lg-2">
-            <li class="nav-item d-none d-sm-block"><a class="nav-link px-2" data-toggle="fullscreen"
-                                                      data-plugin="fullscreen"><i data-feather="maximize"></i></a></li>
             <li class="nav-item dropdown"><a class="nav-link px-2" data-toggle="dropdown"><i
                     data-feather="settings"></i> </a><!-- ############ Setting START-->
                 <div class="dropdown-menu dropdown-menu-center mt-3 w-md animate fadeIn">
@@ -56,16 +49,6 @@
                                                                                                         value="">
                             <i></i></label><label class="radio radio-inline ui-check ui-check-color ui-check-md"><input
                                 type="radio" name="bg" value="bg-dark"> <i class="bg-dark"></i></label></div>
-                        <div class="mb-2 text-muted"><strong>Layouts:</strong></div>
-                        <div class="mb-3"><a href="dashboard.html" class="btn btn-xs btn-white no-ajax mb-1">Default</a>
-                            <a href="layout.a5523.html?bg" class="btn btn-xs btn-primary no-ajax mb-1">A</a> <a
-                                    href="layout.b5523.html?bg" class="btn btn-xs btn-info no-ajax mb-1">B</a> <a
-                                    href="layout.c5523.html?bg" class="btn btn-xs btn-success no-ajax mb-1">C</a> <a
-                                    href="layout.d5523.html?bg" class="btn btn-xs btn-warning no-ajax mb-1">D</a></div>
-                        <div class="mb-2 text-muted"><strong>Apps:</strong></div>
-                        <div><a href="dashboard.html" class="btn btn-sm btn-white no-ajax mb-1">Dashboard</a> <a
-                                href="music5523.html?bg" class="btn btn-sm btn-white no-ajax mb-1">Music</a> <a
-                                href="video5523.html?bg" class="btn btn-sm btn-white no-ajax mb-1">Video</a></div>
                     </div>
                 </div><!-- ############ Setting END--></li><!-- Notification -->
             <li class="nav-item dropdown"><a class="nav-link px-2 mr-lg-2" data-toggle="dropdown"><i
@@ -74,37 +57,13 @@
                 <div class="dropdown-menu dropdown-menu-right mt-3 w-md animate fadeIn p-0">
                     <div class="scrollable hover" style="max-height: 250px">
                         <div class="list list-row">
-                            <div class="list-item" data-id="1">
-                                <div><a href="video.detail.html"><span class="w-32 avatar gd-primary"><img
-                                        src="../assets/img/a1.jpg" alt="."></span></a></div>
-                                <div class="flex">
-                                    <div class="item-feed h-2x"><a href="#">@WordPress</a> How To Get Started With
-                                        WordPress
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="list-item" data-id="5">
-                                <div><a href="video.detail.html"><span class="w-32 avatar gd-warning"><img
-                                        src="../assets/img/a5.jpg" alt="."></span></a></div>
-                                <div class="flex">
-                                    <div class="item-feed h-2x">Learn how to use <a href="#">Google Analytics</a> to
-                                        discover vital information about your readers.
-                                    </div>
-                                </div>
-                            </div>
                             <div class="list-item" data-id="13">
                                 <div><a href="video.detail.html"><span class="w-32 avatar gd-primary">L</span></a></div>
                                 <div class="flex">
                                     <div class="item-feed h-2x">Thanks! Awesome to see good support on Twitter</div>
                                 </div>
                             </div>
-                            <div class="list-item" data-id="17">
-                                <div><a href="video.detail.html"><span class="w-32 avatar gd-warning">A</span></a></div>
-                                <div class="flex">
-                                    <div class="item-feed h-2x">Alibaba made a smart screen <a href="#">@Alibaba</a>
-                                    </div>
-                                </div>
-                            </div>
+
                             <div class="list-item" data-id="10">
                                 <div><a href="video.detail.html"><span class="w-32 avatar gd-danger"><img
                                         src="../assets/img/a10.jpg" alt="."></span></a></div>
@@ -131,23 +90,15 @@
                                              class="nav-link d-flex align-items-center px-2 text-color"><span
                     class="avatar w-24" style="margin: -2px"><img src="../assets/img/a0.jpg" alt="..."></span></a>
                 <div class="dropdown-menu dropdown-menu-right w mt-3 animate fadeIn"><a class="dropdown-item"
-                                                                                        href="page.profile.html"><span>Jacqueline Reid</span>
-                </a><a class="dropdown-item" href="page.price.html"><span class="badge bg-success text-uppercase">Upgrade</span>
-                    <span>to Pro</span></a>
+                                                                                        href=""><span>Jacqueline Reid</span>
+                </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="page.profile.html"><span>Profile</span> </a><a
-                            class="dropdown-item d-flex" href="page.invoice.html"><span class="flex">Invoice</span>
-                        <span><b class="badge badge-pill gd-warning">5</b></span> </a><a class="dropdown-item"
-                                                                                         href="page.faq.html">Need
-                        help?</a>
+                    <a class="dropdown-item" href="page.profile.html"><span>Profile</span> </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="page.setting.html"><span>Account Settings</span> </a><a
+                    <a class="dropdown-item" href="settings.html"><span>Account Settings</span> </a><a
                             class="dropdown-item" href="signin.1.html">Sign out</a></div>
             </li><!-- Navarbar toggle btn -->
-            <li class="nav-item d-lg-none"><a href="#" class="nav-link px-2" data-toggle="collapse" data-toggle-class
-                                              data-target="#navbarToggler"><i data-feather="search"></i></a></li>
-            <li class="nav-item d-lg-none"><a class="nav-link px-1" data-toggle="modal" data-target="#aside"><i
-                    data-feather="menu"></i></a></li>
+
         </ul>
     </div>
 </header>
